--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@builder.io/qwik": "BuilderIO/qwik-build#8e387d6f7e121b852019e77a932921dd8659e11c",
-    "@builder.io/qwik-city": "BuilderIO/qwik-city-build#ddc5dd3dad9713d26c46ac360d9fc0c6104cc560",
+    "@builder.io/qwik-city": "BuilderIO/qwik-city-build#75c6053f1e15c48678903f33447a30848ba2bc1f",
     "@types/eslint": "8.4.10",
     "@types/node": "^18.11.18",
     "@types/node-fetch": "latest",
@@ -36,5 +36,8 @@
     "undici": "5.14.0",
     "vite": "4.0.3",
     "vite-tsconfig-paths": "3.5.0"
+  },
+  "dependencies": {
+    "zod": "^3.20.2"
   }
 }
