--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vite-tsconfig-paths": "3.5.0"
   },
   "dependencies": {
+    "@builder.io/sdk-qwik": "^0.1.6",
     "zod": "^3.20.2"
   }
 }
