--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.17.4",
-    "@builder.io/qwik-city": "^0.1.0-beta13",
+    "@builder.io/qwik": "^0.18.1",
+    "@builder.io/qwik-city": "^0.2.1",
     "@types/eslint": "8.4.10",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.11.19",
     "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "5.48.0",
-    "@typescript-eslint/parser": "5.48.0",
-    "eslint": "8.31.0",
-    "eslint-plugin-qwik": "0.16.2",
+    "@typescript-eslint/eslint-plugin": "5.51.0",
+    "@typescript-eslint/parser": "5.51.0",
+    "eslint": "8.33.0",
+    "eslint-plugin-qwik": "0.18.1",
     "node-fetch": "3.3.0",
     "prettier": "2.8.1",
     "typescript": "4.9.4",
@@ -40,7 +40,7 @@
     "wrangler": "latest"
   },
   "dependencies": {
-    "@builder.io/sdk-qwik": "^0.1.6",
-    "zod": "^3.20.2"
+    "@builder.io/sdk-qwik": "^0.1.9",
+    "zod": "^3.20.6"
   }
 }
