Add qwik auth (#2)
* add qwik-auth

* add missing route

* change to class

* Make qwik-auth work

* remove unneeded style

* Make the login flow end to end work

--- a/package.json
+++ b/package.json
@@ -22,24 +22,26 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^0.18.1",
-    "@builder.io/qwik-city": "^0.2.1",
-    "@types/eslint": "8.4.10",
-    "@types/node": "^18.11.19",
+    "@builder.io/qwik": "^0.19.2",
+    "@builder.io/qwik-city": "^0.4.0",
+    "@types/eslint": "8.21.1",
+    "@types/node": "^18.14.1",
     "@types/node-fetch": "latest",
-    "@typescript-eslint/eslint-plugin": "5.51.0",
-    "@typescript-eslint/parser": "5.51.0",
-    "eslint": "8.33.0",
-    "eslint-plugin-qwik": "0.18.1",
+    "@typescript-eslint/eslint-plugin": "5.53.0",
+    "@typescript-eslint/parser": "5.53.0",
+    "eslint": "8.35.0",
+    "eslint-plugin-qwik": "0.19.2",
     "node-fetch": "3.3.0",
-    "prettier": "2.8.1",
-    "typescript": "4.9.4",
-    "undici": "5.14.0",
-    "vite": "4.0.3",
-    "vite-tsconfig-paths": "3.5.0",
+    "prettier": "2.8.4",
+    "typescript": "4.9.5",
+    "undici": "5.20.0",
+    "vite": "4.1.4",
+    "vite-tsconfig-paths": "4.0.5",
     "wrangler": "latest"
   },
   "dependencies": {
+    "@auth/core": "^0.5.0",
+    "@builder.io/qwik-auth": "^0.0.3",
     "@builder.io/sdk-qwik": "^0.1.9",
     "zod": "^3.20.6"
   }
